@@ -58,6 +58,7 @@ Mejorado ZX Vision:
 - Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
 - Mejorar movimiento del cursor en menús al pulsar PgDn/PgUp
 - Avisar en la marca de redimensionado cuando una ventana se tiene que aumentar de tamaño (porque hay texto mas allá del tamaño actual)
+- Permitir a una ventana desactivar acciones de scroll
 - El Process switcher se ubica en la parte izquierda-abajo de la pantalla por defecto
 - Permitir boton derecho en iconos de dispositivos
 
